--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http:/www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style href="status/css/bootstrap.css"></style>
 </head>
 <body>
 <h1>你好</h1>
 <h2 th:text="呵呵"></h2>
+<p style="background-color:#9fcdff"></p>
 </body>
 </html>
